<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="SquareRoot">\u221A</string>
    <string name="Multiplication">\u00D7</string>
    <string name="SignChange">\u00B1</string>
    <string name="Division">\u00F7</string>
    <string name="num_1">1</string>
    <string name="percent">%</string>
    <string name="num_7">7</string>
    <string name="subtraction">-</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_3">3</string>
    <string name="num_0">0</string>
    <string name="num_2">2</string>
    <string name="num_6">6</string>
    <string name="equal">=</string>
    <string name="clear">c</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="decimal">.</string>
    <string name="add">+</string>
</resources>
